<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timetabler</string>
    <string name="pref_about_summary">Timetabler 0.2.1 by Blake Hawkins (s1143704)</string>
    <string name="action_selCourses">Select Courses</string>
    <string name="action_refreshXML">Refresh XML</string>
    <string name="action_swapSem">Swap Semester</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_filter_courses">Filter Courses</string>
    <string name="title_activity_select_courses">Select Courses</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="toast_xml_copied_text">XML Data copied from static assets successfully.</string>
    <string name="toast_xml_fetched_remote_text">XML Data fetched from remote server successfully.</string>
    <string name="preference_file_key">info.blakehawkins.timetabler.preferencesKey</string>
    <string name="action_filter_courses">Filter Courses</string>
    <string name="display_years">Display Years</string>
    <string name="year1">Year 1</string>
    <string name="year2">Year 2</string>
    <string name="year3">Year 3</string>
    <string name="year4">Year 4</string>
    <string name="year5">Year 5</string>
    <string name="display_semesters">Display Semesters</string>
    <string name="semester1">Semester 1</string>
    <string name="semester2">Semester 2</string>
    <string name="pref_xmlUri">PREF_XML_URI</string>
    <string name="pref_autoSemester">PREF_AUTO_SEMESTER</string>
    <string name="pref_xmlUri_title">XML Fetch URI</string>
    <string name="pref_xmlUri_summary">Location of XML files to fetch when refreshing XML data</string>
    <string name="pref_xmlUri_default">http://www.inf.ed.ac.uk/teaching/courses/selp/xml/</string>
    <string name="pref_resetXmlUri_title">Reset XML Fetch URI</string>
    <string name="pref_resetXmlUri_summary">Sets the XML Fetch URI to the default static address</string>
    <string name="pref_autoSemester_title">Automatically Switch Semester</string>
    <string name="pref_autoSemester_summary">Timetabler will change the displayed semester automatically</string>
    <string name="pref_about_title">About Timetabler</string>
    <string name="loading_content">Content Loading&#8230;</string>
    <string name="title_activity_course_details">Course Details</string>
    <string name="view_map">View Map</string>
    <string name="course_webpage">Course Webpage</string>
    <string name="room">Room:</string>
    <string name="drps">Open in DRPS</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Course Name</string>
    <string name="show_in_timetabler">Show Course in Timetabler</string>
    <string name="euclid">EUCLID</string>
    <string name="apdep">Applicable Departments</string>
    <string name="ai">Artificial Intelligence</string>
    <string name="cg">Cognitive Science</string>
    <string name="cs">Computer Science</string>
    <string name="se">Software Engineering</string>
    <string name="course_level">Course Level</string>
    <string name="pts">Points</string>
    <string name="lec">Lecturer</string>
    <string name="yr1">Year 1</string>
    <string name="yr2">Year 2</string>
    <string name="yr3">Year 3</string>
    <string name="yr4">Year 4</string>
    <string name="yr5">Year 5</string>
    <string name="applicable_years">Applicable Years</string>
    <string name="no_course_name">No Course Associated with Lecture!</string>
    <string name="xml_requested_from">XML requested from</string>
    <string name="TIME_TAG_ID">1</string>
    <string name="COURSE_TAG_ID">2</string></resources>