<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="@string/pref_xmlUri_default"
        android:key="pref_xmlUri"
        android:summary="@string/pref_xmlUri_summary"
        android:title="@string/pref_xmlUri_title" />

    <Preference
        android:key="pref_resetXmlUri"
        android:summary="@string/pref_resetXmlUri_summary"
        android:title="@string/pref_resetXmlUri_title" />
    
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_autoSemester"
        android:summary="@string/pref_autoSemester_summary"
        android:title="@string/pref_autoSemester_title" />
    
    <Preference
        android:title="@string/pref_about_title"
        android:summary="@string/pref_about_summary"
        android:enabled="false"  />

</PreferenceScreen>