<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivitySelectCourses" >

    <TextView
        android:id="@+id/displayYears"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_years" />

    <CheckBox
        android:id="@+id/year1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year1" />

    <CheckBox
        android:id="@+id/year2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year2" />

    <CheckBox
        android:id="@+id/year3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year3" />

    <CheckBox
        android:id="@+id/year4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year4" />

    <CheckBox
        android:id="@+id/year5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year5" />

    <TextView
        android:id="@+id/displaySemesters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_semesters" />

    <CheckBox
        android:id="@+id/semester1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester1" />

    <CheckBox
        android:id="@+id/semester2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester2" />

</LinearLayout>