<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:timetabler="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search"
        timetabler:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        timetabler:showAsAction="ifRoom"
        android:title="@string/search_title" />
     <!--collapseActionView|ifRoom" -->
    <item
        android:id="@+id/action_selCourses"
        android:orderInCategory="1"
        android:title="@string/action_selCourses"
        timetabler:showAsAction="never"/>
    <item
        android:id="@+id/action_refreshXML"
        android:orderInCategory="2"
        android:title="@string/action_refreshXML"
        timetabler:showAsAction="never"/>
    <item
        android:id="@+id/action_swapSem"
        android:orderInCategory="3"
        android:title="@string/action_swapSem"
        timetabler:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        timetabler:showAsAction="never"/>

</menu>